fixing up spacing

--- a/html5up-prologue/assets/css/main.css
+++ b/html5up-prologue/assets/css/main.css
@@ -2683,16 +2683,29 @@ input, select, textarea {
 
 	.projects {
 		display:flex;
+		flex-direction: column;
 		justify-content: space-evenly;
+		
 	}
 
-	.projects div {
+	.proj_row{
+		display:flex;
+		margin: 20px 0 20px 0
+	}
+
+	.solo {
+		justify-content: center;
+	}
+
+	.projects .example {
 		display:flex;
 		flex-direction:column;
 		align-items: center;
 		padding: 0 3% 0 3%;
 		
 	}
+
+	
 
 	.projects div img {
 		max-width: 250px;
